[package]
name = "brokendeer-playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# zip = "0.6.6"
# sha1 = "0.6"
mgl_core = { git = "https://github.com/Broken-Deer/magical-launcher-core.git" }
tokio = { version = "1", features = ["full"] }
# os_info = { version = "3", default-features = false }
regex = "1.8.1"
